20_rot_matrix/grade.txt
Grading at Thu Dec 27 00:16:38 UTC 2018
Attempting to compile rotate.c
rotate.c: In function ‘rotate’:
rotate.c:2:8: error: variable ‘newMat’ set but not used [-Werror=unused-but-set-variable]
   char newMat[10][10];
        ^
cc1: all warnings being treated as errors
The code did not compile!

Overall Grade: F
